@@ -5,9 +5,9 @@ exl-id: a4e19c59-ef2c-4683-a1be-3ec6c0d2f435
 solution: Experience Manager
 feature: Cloud Manager, Developing
 role: Admin, Architect, Developer
-source-git-commit: f5f7830ac6d7f5b65203b12bb1775e64379c7d14
+source-git-commit: 7b9b9f3b957b27812c4a7e8f2dbcf96d8786b73e
 workflow-type: tm+mt
-source-wordcount: '776'
+source-wordcount: '1277'
 ht-degree: 0%
 
 ---
@@ -24,8 +24,8 @@ Cloud Manager bouwt en test uw code gebruikend een gespecialiseerde bouwstijlmil
 * De ontwikkelomgeving is gebaseerd op Linux en is afgeleid van Ubuntu 22.04.
 * Apache Maven 3.9.4 is geïnstalleerd.
    * De Adobe adviseert gebruikers [ hun Geweven bewaarplaatsen bij te werken om HTTPS in plaats van HTTP ](#https-maven) te gebruiken.
-* De geïnstalleerde Java-versies zijn Oracle JDK 11.0.22 en Oracle JDK 8u401.
-* **BELANGRIJK**: Door gebrek, wordt de `JAVA_HOME` milieuvariabele geplaatst aan `/usr/lib/jvm/jdk1.8.0_401`, die Oracle JDK 8u401 bevat. *_Dit gebrek zou voor AEM Projecten van de Wolk moeten worden met voeten getreden om JDK 11_* te gebruiken. Zie [ Plaatsend de Geweven sectie van de Versie JDK ](#alternate-maven-jdk-version) voor meer details.
+* De geïnstalleerde versies van Java zijn Oracle JDK 11.0.22, Oracle JDK 17.0.10, en Oracle JDK 21.0.4.
+* **BELANGRIJK:** Door gebrek, wordt de `JAVA_HOME` milieuvariabele geplaatst aan `/usr/lib/jvm/jdk1.8.0_401`, die Oracle JDK 8u401 bevat. ***Dit gebrek zou voor AEM Projecten van de Wolk moeten worden met voeten getreden om JDK 21 (aangewezen), 17, of 11*** te gebruiken. Zie [ Plaatsend de Geweven sectie van de Versie JDK ](#alternate-maven-jdk-version) voor meer details.
 * Er zijn enkele extra systeempakketten geïnstalleerd die nodig zijn.
    * `bzip2`
    * `unzip`
@@ -54,13 +54,107 @@ Om ervoor te zorgen dat de bijgewerkte versie probleemloos wordt uitgevoerd, raa
 
 ### Een specifieke Java-versie gebruiken {#using-java-support}
 
-In het Cloud Manager-ontwikkelproces wordt standaard gebruikgemaakt van Oracle 8 JDK om projecten te maken, maar AEM Cloud Service-klanten moeten de JDK-versie van Maven voor uitvoering instellen op `11` .
+In het Cloud Manager-ontwikkelproces wordt standaard gebruikgemaakt van Oracle 8 JDK om projecten te maken, maar AEM Cloud Service-klanten moeten de JDK-versie van Maven voor uitvoering instellen op 21 (voorkeur), 17 of 11.
 
 #### De Maven JDK-versie instellen {#alternate-maven-jdk-version}
 
-Adobe raadt u aan de JDK-versie voor de volledige uitgevoerde Maven in te stellen op `11` in een `.cloudmanager/java-version` -bestand.
+Adobe raadt u aan de JDK-versie van Maven-uitvoering in te stellen op `21` of `17` in een `.cloudmanager/java-version` -bestand.
 
-Hiertoe maakt u een bestand met de naam `.cloudmanager/java-version` in de vertakking van de it-opslagruimte die door de pijplijn wordt gebruikt. Bewerk het bestand zodat het alleen de tekst bevat, `11` . Hoewel Cloud Manager ook de waarde `8` accepteert, wordt deze versie niet meer ondersteund voor AEM Cloud Service-projecten. Eventuele andere waarden worden genegeerd. Wanneer `11` wordt opgegeven, wordt Oracle 11 gebruikt en wordt de omgevingsvariabele `JAVA_HOME` ingesteld op `/usr/lib/jvm/jdk-11.0.22` .
+Hiertoe maakt u een bestand met de naam `.cloudmanager/java-version` in de vertakking Git-opslagruimte die door de pijplijn wordt gebruikt. Bewerk het bestand zodat het alleen de tekst `21` of `17` bevat. Hoewel Cloud Manager ook de waarde `8` accepteert, wordt deze versie niet meer ondersteund voor AEM Cloud Service-projecten. Eventuele andere waarden worden genegeerd. Wanneer `21` of `17` wordt opgegeven, wordt Oracle Java 21 of Oracle Java 17 gebruikt en wordt de omgevingsvariabele `JAVA_HOME` ingesteld op `/usr/lib/jvm/jdk-21` of `/usr/lib/jvm/jdk-17` .
+
+#### Vereisten voor migratie naar gebouwen met Java 21 of Java 17 {#prereq-for-building}
+
+>[!NOTE]
+>
+>*wanneer het migreren van uw toepassing aan een nieuwe Java bouwt versie en runtime versie, grondig test in ontwikkelings en werkgebiedmilieu&#39;s alvorens aan productie op te stellen.
+>Van speciale nota, zijn de volgende eigenschappen nog niet formeel bevestigd met Java 21 runtime: [ Forms ](/help/forms/home.md), [ Werkschema&#39;s ](/help/sites-cloud/authoring/workflows/overview.md), [ Inbox ](/help/sites-cloud/authoring/inbox.md), en [ Projecten ](/help/sites-cloud/authoring/projects/overview.md). Als uw toepassing op deze eigenschappen vertrouwt, zorg het uitvoerige testen om functionaliteit te verifiëren.*
+
+##### Enkele vertaalfuncties {#translation-features}
+
+De volgende functies werken mogelijk niet correct wanneer u werkt met Java 21 of Java 17 en Adobe verwacht deze functies begin 2025 te kunnen oplossen:
+
+* `XLIFF` (XML Localization Interchange File Format) mislukt bij gebruik van Human Translation.
+* `I18n` (Internationalisatie) behandelt de taallandinstellingen Hebreeuws (`he`), Indonesisch (`in`) en Jiddisch (`yi`) niet correct als gevolg van wijzigingen in de constructor Locale in nieuwere Java-versies.
+
+#### Runtime-vereisten {#runtime-requirements}
+
+De Java 21-runtime wordt vanaf februari 2025 gebruikt voor builds op Java 21, Java 17 en Java 11. Om de compatibiliteit te waarborgen, zijn de volgende aanpassingen nodig.
+
+Bibliotheekupdates kunnen altijd worden toegepast, omdat ze compatibel blijven met oudere Java-versies.
+
+* **Minimale versie van `org.objectweb.asm`:**
+Werk het gebruik van `org.objectweb.asm` naar versie 9.5 of hoger bij om ondersteuning voor nieuwere JVM-runtimes te garanderen.
+
+* **Minimale versie van `org.apache.groovy`:**
+Werk het gebruik van `org.apache.groovy` naar versie 4.0.22 of hoger bij om ondersteuning voor nieuwere JVM-runtimes te garanderen.
+
+  Deze bundel kan indirect worden omvat door dergebiedsdelen zoals de AEM Groovy Console toe te voegen.
+
+* **geef een runtime parameter uit:**
+Wanneer AEM lokaal wordt uitgevoerd met Java 21, mislukken de beginscripts ( `crx-quickstart/bin/start` of `crx-quickstart/bin/start.bat` ) vanwege de parameter `MaxPermSize` . Als remedie verwijdert u `-XX:MaxPermSize=256M` uit het script of definieert u de omgevingsvariabele `CQ_JVM_OPTS` en stelt u deze in op `-Xmx1024m -Djava.awt.headless=true` .
+
+  De Adobe is van plan dit probleem in een toekomstige release op te lossen.
+
+>[!NOTE]
+>
+>Wanneer `.cloudmanager/java-version` is ingesteld op `21` of `17` , wordt de Java 21-runtime geïmplementeerd. In februari of maart 2025 is de Java 21-runtime gepland voor implementatie voor alle klanten, zelfs als Java 11 wordt gebruikt om uw code samen te stellen.
+
+#### Vereisten voor de buildtijd
+
+De volgende aanpassingen zijn vereist om het project te kunnen bouwen met Java 21 en Java 17. Ze kunnen op elk gewenst moment worden bijgewerkt omdat ze compatibel zijn met oudere versies van Java.
+
+* **Minimale versie van `bnd-maven-plugin`:**
+Werk het gebruik van `bnd-maven-plugin` naar versie 6.4.0 bij om ondersteuning voor nieuwere JVM-runtimes te garanderen.
+
+  Versies 7 of hoger zijn niet compatibel met Java 11 of lager. Een upgrade naar die versie wordt daarom afgeraden.
+
+* **Minimale versie van `aemanalyser-maven-plugin`:**
+Werk het gebruik van `aemanalyser-maven-plugin` naar versie 1.6.6 of hoger bij om ondersteuning voor nieuwere JVM-runtimes te garanderen.
+
+* **Minimale versie van `maven-bundle-plugin`:**
+Werk het gebruik van `maven-bundle-plugin` naar versie 5.1.5 of hoger bij om ondersteuning voor nieuwere JVM-runtimes te garanderen.
+
+  Versie 6 of hoger is niet compatibel met Java 11 of lager. Een upgrade naar die versie wordt daarom niet aanbevolen.
+
+* **de gebiedsdelen van de Update in `maven-scr-plugin`:**
+`maven-scr-plugin` is niet rechtstreeks compatibel met Java 21 of Java 17. U kunt echter wel descriptorbestanden genereren door de ASM-afhankelijkheidsversie bij te werken in de plug-inconfiguratie, zoals in het volgende voorbeeld wordt getoond:
+
+```XML
+<project>
+  ...
+  <build>
+    ...
+    <plugins>
+      ...
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-scr-plugin</artifactId>
+        <version>1.26.4</version>
+        <executions>
+          <execution>
+            <id>generate-scr-scrdescriptor</id>
+            <goals>
+              <goal>scr</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-analysis</artifactId>
+            <version>9.7.1</version>
+            <scope>compile</scope>
+          </dependency>
+        </dependencies>
+      </plugin>
+      ...
+    </plugins>
+    ...
+  </build>
+  ...
+</project>
+```
+
 
 ## Omgevingsvariabelen - standaard {#environment-variables}
 
